# HTTP-DDS_Bridge

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Project_Plan.md  README.md  Timeline.md  docker-compose.yml  requirements.txt
bridge/: main.py  test_main.py
bridge-build/: CMakeCache.txt  Makefile  cmake_install.cmake  main.py  test.py  testSub.py  test_main.py  test_pub.py
bridge-build/extern_pybind11_build/: Makefile  cmake_install.cmake
bridge-src/: Sample.idl  generate_code.py  idl_parser.py
bridge-src/antlr4_generated/: IDLLexer.py  IDLListener.py  IDLParser.py
bridge-src/generator/: bindings_generator.py  idl_parser.py  publisher_generator.py  subscriber_generator.py
dds/: CMakeLists.txt
dds/src/: Test.hpp  Test.idl  TestCdrAux.hpp  TestCdrAux.ipp  TestPubSubTypes.cxx  TestPubSubTypes.hpp  TestPublisher.cpp  TestSubscriber.cpp  TestTypeObjectSupport.cxx  TestTypeObjectSupport.hpp
demo-pub-sub/: CMakeLists.txt
demo-pub-sub/demo-src/: DemoPublisher.cpp  DemoSubscriber.cpp  Sample.hpp  SampleCdrAux.hpp  SampleCdrAux.ipp  SamplePubSubTypes.cxx  SamplePubSubTypes.hpp  SampleTypeObjectSupport.cxx  SampleTypeObjectSupport.hpp
project-information/: Project_Plan.md
server/: server.py
src/: Sample.idl  generate_code.py
